# megrez

./: .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: CODEOWNERS  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codeql.yml  release-drafter.yml  release.yml  rust.yml
docs/: format_detection.md
src/: cli.rs  lib.rs  main.rs
src/commands/: cat.rs  mod.rs  schema.rs
src/formats/: avro.rs  csv.rs  detect.rs  json.rs  mod.rs  orc.rs  parquet.rs
src/model/: schema.rs
src/render/: jsonl.rs  mod.rs  schema_text.rs
src/util/: errors.rs  io.rs
tests/: cli_cat.rs  cli_schema.rs  util.rs
tests/fixtures/: dummy-sample.avro  sample.avro  sample.csv  sample.json
tools/: make_sample_parquet.py
