[package]
name = "megrez"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
orc = []

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "1"
csv = "1"
apache-avro = "0.16"
arrow = "53"
parquet = { version = "53", features = ["arrow"] }

[dev-dependencies]

[package.metadata.dist]
ci = ["github"]
installers = ["shell", "powershell"]
targets = ["x86_64-unknown-linux-gnu"]
